# LiDAR-scan-matching

./: .gitignore
ndt_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ndt_ws/install/ndt_localization/share/ndt_localization/: local_setup.dsv  (+6 more)
ndt_ws/log/: latest_build
ndt_ws/src/ndt_localization/: CMakeLists.txt
ndt_ws/src/ndt_localization/src/: ndt_localizer_node.cpp
proposal_ws/: README.md
proposal_ws/segmentation_aware_ndt_ws/: make_kitti_trajectory_figs.py  readme.odt  run_classical_ndt_evaluation.sh  run_kitti_00_10_localization.sh  run_kitti_00_10_mapping.sh  run_kitti_30x_evaluation.sh  run_kitti_localization_evaluation.sh  run_kitti_mapping.sh  run_town10_batch_evaluation.sh  run_town10_generate_localization_bags.sh  run_weighted_ndt_evaluation.sh  view_map.py  view_ndt_map.py
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/: CMakeLists.txt  package.xml
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/config/: kitti_64.yaml  weighted_ndt_weights.yaml
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/include/lidar_odometry/: ros_utils.hpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/include/ndt_mapping_localization/: weighted_map.hpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/include/ndt_omp/: ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/include/ndt_pca/: ndt_pca.h  ndt_pca_impl.hpp  voxel_grid_covariance_pca.h  voxel_grid_covariance_pca_impl.hpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/include/segmentation_aware_ndt/: lego_loam_segmentation.hpp  weighted_ndt_voxel.hpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/launch/: build_ndt_voxel_map.launch.py  classical_localization.launch.py  classical_mapping.launch.py  kitti_localization.launch.py  kitti_mapping.launch.py  semantic_localization.launch.py  semantic_mapping.launch.py
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/scripts/: kitti_sequence_publisher.py
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/src/apps/: pointcloud_map_builder.cpp  semantic_map_builder.cpp  semantic_ndt_localizer.cpp  semantic_ndt_voxel_builder.cpp  weighted_map_converter.cpp  weighted_ndt_localizer.cpp  weighted_ndt_map_builder.cpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/src/lidar_odometry/: prefiltering_node.cpp  scan_matching_odom_node.cpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/src/ndt_omp/: ndt_omp.cpp  voxel_grid_covariance_omp.cpp
proposal_ws/segmentation_aware_ndt_ws/segmentation_aware_ndt/src/ndt_pca/: ndt_pca.cpp  voxel_grid_covariance_pca.cpp
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_214642/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_214919/: planned_route.csv  vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_215155/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_215432/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_215708/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_215829/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_215949/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_220110/: planned_route.csv  vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_220230/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_220304/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_220337/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_220928/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221221/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221254/: planned_route.csv  vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221327/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221459/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221630/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221801/: planned_route.csv  vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_221932/: planned_route.csv  vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_222209/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_222446/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260705_222723/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260707_121842/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260707_122119/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260707_122355/: vehicle_pose_log.csv
proposal_ws/segmentation_aware_ndt_ws/vehicle_pose_log/20260707_122632/: vehicle_pose_log.csv
(+25 files in other folders)
