<?xml version="1.0"?>
<package format="3">
  <name>segmentation_aware_ndt</name>
  <version>0.0.0</version>
  <description>ROS2 segmentation-aware NDT map building and localization package.</description>

  <maintainer email="seokhwan@example.com">seokhwan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
